fix: bug on chapter page where the text would overflow the header

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -335,7 +335,12 @@ h1, h2, h3, h4, h5, h6, figure {
 		}
 	}
 }
-
+#fh5co-header.chapter-header {
+	@media screen and (max-width: $screen-sm) {
+		min-height: 800px;
+		height: auto;
+		padding-bottom: 4rem;
+	}}
 #main {
 	margin-top: 14em;
 	clear: both;
